--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!-- go on following link to see output -->
+<!-- "https://kartik9356.github.io/Netflix-clone/" -->
+
 <!DOCTYPE html>
 <html lang="en">
 
